@startuml タイトルシーン
class TitleGameManager{
}

class TitleUIManager{

}

class TitleMenuGameMode{

}

class TitleGameModeManager{

}

abstract class GameMode{

}

abstract class GameModeManager{

}

abstract class GameManager{

}

TitleGameManager -up-|> GameManager
TitleGameModeManager -up-|> GameModeManager
TitleMenuGameMode -up-|> GameMode

TitleMenuGameMode *--> TitleUIManager
TitleMenuGameMode *-right-> TitleGameManager 

TitleGameManager --> TitleUIManager : Observe

TitleGameModeManager -right-> TitleGameManager : Observe
TitleGameModeManager *--> TitleMenuGameMode



@enduml